<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <variable
            name="callback"
            type="com.example.realweather.view.OnboardingCallback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_realweather"
            android:maxLines="2"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/please_enter_your_zip"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="13sp"
            android:src="@drawable/ic_clear"
            android:contentDescription="@string/weather_icon" />

        <EditText
            android:id="@+id/editText"
            android:autofillHints="@string/enter_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/enter_zip"
            android:maxLength="5"
            android:textSize="13sp"
            android:inputType="number"
            android:nextFocusForward="@id/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/or"
            android:textSize="13sp" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{callback.onEnableLocationClick}"
            android:text="@string/enableLocation"
            android:textAllCaps="true" />

    </LinearLayout>
</layout>
